<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/softblack"
    android:rotationX="360"
    android:scaleX="1">

    <Button
        android:id="@+id/artifactDelete"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/lightgold"
        android:text="Delete"
        android:textColor="@color/white"
        android:textColorLink="#9B0808"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="@color/lightgold"
        android:text="Edit"
        android:textColor="@color/white"
        android:textColorLink="#A4680F"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/artifactDelete"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="38dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/expandedViewHomeButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:adjustViewBounds="false" />

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/lightgold"
                android:textSize="48sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lot Number:"
                android:textColor="@color/lightgold"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/Lotnum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Description:"
                android:textColor="@color/lightgold"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Category:"
                android:textColor="@color/lightgold"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Material:"
                android:textColor="@color/lightgold"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/material"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dynasty/Period:"
                android:textColor="@color/lightgold"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/dynastyPeriod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Cultural Origin:"
                android:textColor="@color/lightgold"
                android:textSize="24sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/culturalOrigin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dimensions:"
                android:textColor="@color/lightgold"
                android:textSize="24sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/dimensions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Condition:"
                android:textColor="@color/lightgold"
                android:textSize="24sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/conditionReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Current Location:"
                android:textColor="@color/lightgold"
                android:textSize="24sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/currentLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Aquisistion Method:"
                android:textColor="@color/lightgold"
                android:textSize="24sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/acquisitionMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Provenance: "
                android:textColor="@color/lightgold"
                android:textSize="24sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/provenance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Accession Number:"
                android:textColor="@color/lightgold"
                android:textSize="24sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/accessionNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Notes: "
                android:textColor="@color/lightgold"
                android:textSize="24sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/notes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/relatedArtifactsHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Related Artifacts:"
                android:textColor="@color/lightgold"
                android:textSize="24sp"
                android:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/relatedArtifactsList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layoutDirection="ltr"
                android:scrollIndicators="bottom"
                android:scrollbars="horizontal" />

            <Button
                android:id="@+id/addComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/lightgold"
                android:text="@string/add_comment"
                android:textColor="@color/white"
                android:visibility="gone" />

            <EditText
                android:id="@+id/commentField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/comment_hint"
                android:inputType="textMultiLine"
                android:textColor="@color/white"
                android:textColorHint="@color/editor_hint"
                android:visibility="gone" />
            <TextView
                android:id="@+id/commentHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Comments: "
                android:textColor="@color/lightgold"
                android:textSize="24sp"
                android:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/commentSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:visibility="visible" />


        </LinearLayout>
    </ScrollView>

    <ToggleButton
        android:id="@+id/saveArtifactToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="37dp"
        android:allowUndo="false"
        android:checked="false"
        android:clickable="true"
        android:focusable="true"
        android:lines="2"
        android:textOff="Add to\nCollection"
        android:textOn="Remove from\nCollection"
        android:textSize="12sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/likeButton" />

    <ImageButton
        android:id="@+id/expandedViewHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="38dp"
        android:background="#00FFFFFF"
        android:clickable="true"
        android:contentDescription="@string/home_icon_speakable_text"
        android:focusable="true"
        android:scaleY="1.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/home_icon" />

    <CheckBox
        android:id="@+id/likeButton"
        android:layout_width="wrap_content"
        android:layout_height="67dp"

        android:layout_marginStart="13dp"
        android:layout_marginBottom="28dp"

        android:button="@null"
        android:drawableStart="@drawable/heart_selector"
        android:drawablePadding="5dp"
        android:includeFontPadding="false"
        android:textColor="@color/lightgold"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/expandedViewHomeButton"
        app:useMaterialThemeColors="false" />

</androidx.constraintlayout.widget.ConstraintLayout>